turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state =0

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
    def colore(c:Color){
    setCouleurBrosse(c)
    baisseBrosse()
    leveBrosse()
  }
  var col =0
  while(getCouleurSol!=colors(col)){
    col+=1
  }
  def mouv(m:Int){
    if(m==0){}
    if(m==1){avance()}
    if(m==2){gauche();avance()}
    if(m==4){retourne();avance()}
    if(m==8){droite();avance()}
  }
  colore(rule(state)(col))
  mouv(rule(state)(col)(1))
  state=rule(state)(col)(2)
}